--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@ body {
 }
 
 .container {
+    height: 100vh;
     margin: auto;
-    max-width: 50%;
+    max-width: 414px;
+    min-width: 260px;
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -20,6 +22,7 @@ body {
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
 .message {
